# requirements-intake-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/routes/: requirements.py  sessions.py
configs/: app.sample.yaml
conversation/: engine.py  session_store.py  states.py
core/: config.py  guardrails.py  logging.py  redaction.py
docs_gen/: render_docx.py  render_md.py
examples/: requirement_example.json
llm/: base.py
llm/providers/: openai_compatible.py
schemas/: requirement.v1.json
scripts/: run_local.sh  run_ui.sh
services/: finalizer.py  requirements_service.py
templates/docx/: OnePager_Placeholders_Template.docx
tests/: test_schema_validation.py
ui/: streamlit_app.py
